syntax = "proto3";
package ojo.gmp.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/ojo-network/ojo/x/gmp/types";

option (gogoproto.goproto_getters_all) = false;

// GmpVoteExtension defines the vote extension structure used by the gmp
// module.
message GmpVoteExtension {
  int64 height = 1;
  int64 gas_estimation = 2;
}

// InjectedVoteExtensionTx defines the vote extension tx injected by the prepare
// proposal handler.
message InjectedVoteExtensionTx {
  int64 median_gas_estimation = 1;
  bytes extended_commit_info = 2;
}
